# salesforce-connector

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: CONNECTOR_FRAMEWORK_ALIGNMENT.md  FRONTEND_INTEGRATION.md  PRODUCTION_HANDOFF.md  SALESFORCE_CONNECTOR_STATUS.md  Salesforce_Connector_Status.docx
src/sf_connector/: __init__.py  adapter.py  auditify.py  cli.py  config.py  oauth.py  salesforce.py  salesforce_adapter.py  sync.py  transform.py
tests/: test_adapter.py  test_oauth.py  test_salesforce.py  test_sync.py  test_transform.py
