[project]
name = "auditify-salesforce-connector"
version = "0.1.0"
description = "Standalone CLI connector that extracts records from Salesforce and uploads them into Auditify as data sources."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "simple-salesforce>=1.12.6",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic-settings>=2.2",
    "cryptography>=42.0",
]

[project.scripts]
sf-connector = "sf_connector.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sf_connector"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer's documented pattern is `= typer.Option(...)` in defaults.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
